<resources>
    ---------------------------------------------------Job------------------------------------------
    <string name="a">IT Developer</string>
    <string name="b">Business / Sales</string>
    <string name="c">Architecture</string>
    <string name="d">Government agency</string>
    <string name="e">Graphic Design</string>
    <string name="f">Insurance</string>
    <string name="g">Legal</string>
    <string name="h">Interpreter</string>
    <string name="i">Media</string>
    <string name="j">Postal</string>
    <string name="k">Estate Agent</string>
    <string name="l">Stocks</string>
    <string name="m">Tourism</string>
    <string name="n">Textile / Footwear</string>
    <string name="o">Mechanical</string>
    ------------------------------------------------Job Information---------------------------------
    <string name="salary">Salary</string>
    <string name="recruit">Recruit</string>
    <string name="work">Work</string>
    <string name="experience">Experience</string>
    <string name="level">Level</string>
    <string name="people">\ people</string>
    <string name="year">\ year</string>
    <string name="job_description">Job Description</string>
    <string name="candidate_requirements">Candidate Requirements</string>
    <string name="Requirements">Requirements*</string>
    <string name="Description">Description of job*</string>
    <string name="JobPosition">Job Position*</string>
    <string name="benefit">Benefit</string>
    <string name="Benefitof">Benefit of your Company*</string>
    <string name="typejob">Type of job*</string>
    <string name="Level">Level*</string>
    <string name="Experience">Experience*</string>
    <string name="Salary">Salary*</string>
    <string name="JobInformation">Job Information</string>
    <string name="Addfirstjob">Add a Job</string>
    <string name="Joblocation">"   Job location*"</string>

    ------------------------------------------------allapp-------------------------------------
    <string name="app_name">GoJob</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="job_for_two_side">Benefits for both</string>
    <string name="register">REGISTER</string>
    <string name="createcv">CREATE YOUR CV</string>
    <string name="help_you_easily_build_a_profile_find_jobs_quickly_if_you_are_a_recruiter_you_can_actively_find_the_people_you_need_for_your_job">Help you easily build a profile, find jobs quickly. if you are a recruiter, you can actively find the people you need for your job</string>
    <string name="please_enter_your_phone_number_and_passwork_to_log_in">Please enter your email and passwork to log in</string>
    <string name="please_enter_your_phone_number_and_passwork_to_sign_up">Please enter your email and passwork to sign up</string>
    <string name="LoginSuccess">Login Success</string>
    <string name="Wrong">Wrong email or password</string>
    <string name="EmailSend">Email Send</string>
    <string name="CreateAccout">Create Accout!!!</string>
    <string name="alreadyhaveaccout">This Email already have account</string>
    <string name="Youare">You are?</string>
    <string name="select_your_role">Select your role</string>
    <string name="next">Next</string>
    <string name="job_seeker">Job seeker</string>
    <string name="Create_Your_CV">your CV</string>
    <string name="your_avatar">Your Avatar</string>
    <string name="position">Position*</string>
    <string name="name">Name*</string>
    <string name="university">University*</string>
    <string name="introduce_you_self">Introduce you self</string>
    <string name="phone_number">Phone number*</string>
    <string name="date_of_birth">Date Of Birth*</string>
    <string name="website">Website</string>
    <string name="address">Address*</string>
    <string name="missing">You Missing important information (*)</string>
    <string name="skill"><b>Skill</b></string>
    <string name="certifications_js"><b>Certifications</b></string>
    <string name="interest"><b>Interest</b></string>
    <string name="workexperian"><b>Work Experience</b></string>
    <string name="Choose">Choose your fields</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="enter_email_and_password">Enter email and password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="do_you_want_to_turn_on_off_dark_mode_you_will_need_to_restart_the_app_for_the_change_to_take_effect">Do you want to turn on/off dark mode? You will need to restart the app for the change to take effect</string>
    <string name="confirm_change">Confirm change</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="your_want_to_logout">You want to logout?</string>
    <string name="notification">Notification</string>
    <string name="hello_new_user_we_wish_you_all_the_luck_in_finding_a_job">Hello new user! We wish you all the luck in finding a job</string>
    <string name="careers">Careers</string>
    <string name="sort_by">"Sort by "</string>
    <string name="full_time">Full-Time</string>
    <string name="part_time">Part-Time</string>
    <string name="none">None</string>
    <string name="intern">Intern</string>
    <string name="choice_city_to_sort">Choice city to sort</string>
    <string name="choice_type_of_job_to_sort">Choice type of job to sort</string>
    <string name="choice_experience_year_to_sort">Choice experience year to sort</string>
    <string name="job_search_status">Job search status</string>
    <string name="review_applied_jobs">Review applied jobs</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="refresh_a_job_list">Refresh a job list?</string>
    <string name="filter">Filter</string>
    <string name="_1_year">1 year</string>
    <string name="_0_year">0 year</string>
    <string name="_3_year">3+ year</string>
    <string name="_2_year">2 year</string>
    <string name="location">Location</string>
    <string name="type_of_work">Type of work</string>
    <string name="year_of_experience">Year of Experience</string>
    <string name="language">Language</string>
    <string name="enter_email_or_password">Enter valid email or password</string>
    <string name="job_management_options">Job management options</string>
    <string name="previous_jobs">Previous Jobs</string>
    <string name="job_on_active">Job On Active</string>
    <string name="setting">Setting</string>
    <string name="hello">Hello,</string>
    <string name="gojob_wishing_you_success_in_finding_the_perfect_candidates_to_join_your_team">Gojob wishing you success in finding the perfect candidates to join your team!</string>
    <string name="choice_date_end">Choice Date End</string>
    <string name="create_new_pattern">Create new pattern</string>
    <string name="accept_list">Accept List</string>
    <string name="view_apply">View Apply</string>
    <string name="find_candidates">Find candidates</string>
    <string name="you_are_invited_to_apply_for_the_position">"You are invited to apply for the position: "</string>
    <string name="your_cv_being_refuse_many_time_we_recommend_you_edit_your_cv_or_try_different_fields">Your Cv being refuse many time. we recommend you edit your cv or try different fields</string>
    <string name="your_cv_being_refuse_for">"Your CV being refuse for: "</string>
    <string name="phone_number_copied_to_clipboard">Phone number copied to clipboard</string>
    <string name="email_copied_to_clipboard">Email copied to clipboard</string>
    <string name="your_company_avatar">Your Company Avatar</string>
    <string name="company_name">Company Name*</string>
    <string name="company_infomation">Company infomation</string>
    <string name="name_">Name:</string>
    <string name="email_">Email:</string>
    <string name="phone_">Phone:</string>
    <string name="date">Date:</string>
    <string name="work_address">Work address*</string>
    <string name="recruiter">Recruiter</string>
    <string name="gojob_everytime_everywhere">GoJob - Everytime - Everywhere</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="password">Password</string>
    <string name="searching_for_candidates_or_approving_applicants_for_a_job_opening">Searching for candidates or approving applicants for a job opening.</string>
    <string name="view_apply_of_previous_jobs_or_accept_list">View apply of previous jobs or accept list</string>
    <string name="view_candidates">View candidates</string>
    <string name="position_">Position:</string>
    <string name="region">Region:</string>
    <string name="choice_pattern">Choice pattern</string>
    <string name="you_cant_edit_this_job_anymore_please_create_new_job">You cant edit this job anymore, please create new job</string>
    <string name="you_cant_turn_on_this_job_please_create_new_job">you cant turn on this job, please create new job</string>
    <string name="you_cant_find_candidates_to_this_job_please_create_new_job">you cant find Candidates to this job, please create new job</string>
    <string name="by">" by "</string>
    <string name="your_cv_being_refuse_for_position">"Your CV being refuse for position: "</string>
    <string name="your_cv_was_accept_please_wait_for_company_contact_position">"Your CV was accept please wait for Company contact. Position: "</string>
    <string name="you_will_not_be_able_to_continue_searching_candidates_for_this_job">you will not be able to continue searching candidates for this job</string>
    <string name="turn_off_finding">Turn off finding?</string>
    <string name="reset">Reset</string>
    <string name="choice_language">Choice language</string>
    <string name="search_history">Search History</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_required">Not Required</string>

    -----------------------------------dropdown item----------------------------------------
    <string-array name="my_dropdown_items">
        <item>Not Required</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="my_dropdown_items_typejob">
        <item>Full-Time</item>
        <item>Part-Time</item>
        <item>Intern</item>
    </string-array>
    <string-array name="my_dropdown_items_location">
        <item>Ho Chi Minh</item>
        <item>Ha Noi</item>
    </string-array>

</resources>