<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">


    <include
        android:id="@+id/toolbarid"
        layout="@layout/toolbar"
        />

    <TextView
        android:id="@+id/hind1id"
        style="@style/hind1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/toolbarid"
        android:gravity="center_vertical"
        android:text="@string/please_enter_your_phone_number_and_passwork_to_sign_up"
        android:textSize="15sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarid"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:drawableTint="@color/Mint"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginTop="15dp"
        android:hint="Email"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/hind1id"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:drawableTint="@color/Mint"
        android:drawableLeft="@drawable/padlock"
        android:id="@+id/txtpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/txtemail"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnsignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtpw" />
</androidx.constraintlayout.widget.ConstraintLayout>