<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CompanycollectionActivity"
    >


    <include
        android:id="@+id/toolbarid"
        layout="@layout/toolbar"
        />


    <TextView
        android:id="@+id/hind1id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarid"
        android:gravity="center_vertical"
        android:text="@string/select_your_role"
        android:textSize="30sp"
        android:textColor="@color/darkmodedfont"
        app:layout_constraintTop_toBottomOf="@+id/toolbarid"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/hind1id"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/collectionBox"
        android:elevation="5dp">


        <RadioButton
            android:textColor="@color/Mint"
            android:id="@+id/Job_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="@string/job_seeker"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:checked="true"
            />


        <RadioButton
            android:textColor="@color/darkmodedfont"
            android:id="@+id/Recruiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:text="Recruiter"
            android:textAlignment="textStart"
            android:textSize="25sp" />
    </RadioGroup>

    <Button

        android:id="@+id/btnsignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>